✔ More signs